--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
         const words = {
             concept: [
                 '生成AIの利点', 'AIツール','生成AIの時代に必要な能力についての考察','まとめ',
-                '理想的な人材の条件', 'AI時代','生成AIの現状と課題','現場での課題','必要な能力',
+                '理想的な人材の条件', '生成AI時代','生成AIの現状と課題','現場での課題','必要な能力',
             ],
             
             tech: [
@@ -578,6 +578,7 @@
                 '効果的に使う',
                 'タスク分解能力',
                 '高い言語能力',
+                '継続的な学習能力',
                 '継続的な学習能力と謙虚さが重要',
                 '謙虚さと素直さ',
             ],
